<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FEF9F2"
    android:id="@+id/srollLOGIN">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="298dp"
                android:layout_height="192dp"
                android:layout_marginStart="-30dp"
                android:src="@drawable/untitled__2_">

            </ImageView>

            <ImageView
                android:layout_width="297dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:layout_marginStart="140dp"
                android:layout_marginTop="-210dp"
                android:src="@drawable/pent">
            </ImageView>


        </LinearLayout>


        <LinearLayout
            android:windowSoftInputMode="adjustResize"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shadow_shape"
            android:elevation="80dp"
            android:orientation="vertical"
            android:layout_weight="1">


            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:textColor="@color/mehhblack"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:backgroundTint="@color/mehhblack"
                android:hint="@string/full_name"
                android:textColorHint="@color/mehhblack">

            </EditText>

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:textColor="@color/mehhblack"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/mehhblack"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/mehhblack">

            </EditText>

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:textColor="@color/mehhblack"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/mehhblack"
                android:hint="@string/username"
                android:textColorHint="@color/mehhblack">

            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/mehhblack"
                android:hint="@string/hintpswd"
                android:textColor="@color/mehhblack"
                android:textColorHint="@color/mehhblack"
                android:inputType="textPassword">

            </EditText>

            <EditText
                android:id="@+id/conf_password"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/mehhblack"
                android:backgroundTint="@color/mehhblack"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/mehhblack"
                android:inputType="textPassword">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:textColor="@color/mehhblack"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/mehhblack"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColorHint="@color/mehhblack">

                </EditText>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:textColor="@color/mehhblack"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/mehhblack"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColorHint="@color/mehhblack">

                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/signUp"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/light_black"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/sign_up"
                android:textColor="@color/offwhite"
                android:textSize="25sp">

            </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/mehhblack"
                    android:layout_gravity="center"
                    android:layout_marginStart="70dp"
                    android:textSize="17sp"
                    android:paddingBottom="10dp"
                    android:fontFamily="arial">
                </TextView>

                <TextView
                    android:id="@+id/logIn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:textColor="#FF0000"
                    android:text="@string/log_in"
                    android:textSize="17sp"
                    android:paddingBottom="10dp"
                    android:fontFamily="arial"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>