<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF9F2"
    android:fillViewport="true">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:id="@+id/wraperLayout"
           android:background="@color/offwhite">

           <LinearLayout
               android:id="@+id/uper_layout"
               android:elevation="60dp"
               android:layout_width="500dp"
               android:layout_height="500dp"
               android:layout_gravity="center"
               android:layout_marginTop="-290dp"
               android:background="@drawable/shdowsorcle"
               android:orientation="vertical">

               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:layout_gravity="center"
                   android:layout_marginTop="310dp"
                   android:src="@drawable/accountblacl">

               </ImageView>


               <TextView
                   android:id="@+id/yourAccinfoname"
                   android:layout_width="wrap_content"
                   android:layout_height="30dp"
                   android:layout_gravity="center"
                   android:baselineAligned="false"
                   android:text="@string/example_name"
                   android:textColor="@color/mehhblack"
                   android:textSize="20sp">

               </TextView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="30dp"
                   android:layout_gravity="center"
                   android:text="@string/your_account_information"
                   android:textColor="@color/mehhblack"
                   android:textSize="20sp">

               </TextView>


           </LinearLayout>


           <LinearLayout
               android:layout_width="360dp"
               android:layout_gravity="center"
               android:layout_marginTop="50dp"
               android:elevation="80dp"
               android:layout_height="wrap_content"
               android:background="@drawable/shadow_shape"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/full_name"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="30dp"
                   android:textColor="@color/mehhblack">
               </TextView>

               <TextView
                   android:id="@+id/fullnameacc"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/full_name"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="5dp"
                   android:textSize="20sp"
                   android:layout_marginBottom="10dp"
                   android:textColor="@color/mehhblack">
               </TextView>

               <View
                   android:layout_width="340dp"
                   android:layout_gravity="center"
                   android:layout_height="1dp"
                   android:background="@color/mehhblack" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/myaccphonenum"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"
                   android:textColor="@color/mehhblack">
               </TextView>

               <TextView
                   android:id="@+id/phonenumberacc"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/phone_number"
                   android:layout_marginStart="10dp"
                   android:textSize="20sp"
                   android:layout_marginBottom="10dp"
                   android:textColor="@color/mehhblack">
               </TextView>

               <View
                   android:layout_width="340dp"
                   android:layout_gravity="center"
                   android:layout_height="1dp"
                   android:background="@color/mehhblack" />


               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/username"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/mehhblack">
               </TextView>

               <TextView
                   android:id="@+id/usernameacc"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/username"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="5dp"
                   android:textSize="20sp"
                   android:layout_marginBottom="10dp"
                   android:textColor="@color/mehhblack">
               </TextView>

               <View
                   android:layout_width="340dp"
                   android:layout_gravity="center"
                   android:layout_height="1dp"
                   android:background="@color/mehhblack" />


               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/prompt_email"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/mehhblack">
               </TextView>

               <TextView
                   android:id="@+id/emailacc"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/email_example"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="10dp"
                   android:textSize="20sp"
                   android:textColor="@color/mehhblack">
               </TextView>

               <View
                   android:layout_width="340dp"
                   android:layout_gravity="center"
                   android:layout_height="1dp"
                   android:background="@color/mehhblack" />

               <Button
                   android:id="@+id/change_acc_data"
                   android:layout_width="260dp"
                   android:layout_gravity="center"
                   android:layout_marginTop="30dp"
                   android:layout_height="50dp"
                   style="?attr/materialButtonOutlinedStyle"
                   android:text="@string/change_account_information"
                   android:textAllCaps="false"
                   android:textSize="20sp"
                   android:layout_marginBottom="10dp"
                   android:textColor="@color/light_black"
                   />

               <View
                   android:layout_width="340dp"
                   android:layout_gravity="center"
                   android:layout_height="1dp"
                   android:background="@color/offwhite" />

               <Button
                   android:id="@+id/logout"
                   android:layout_marginTop="10dp"
                   android:layout_width="260dp"
                   android:layout_gravity="center"
                   android:layout_height="50dp"
                   android:text="@string/log_out"
                   android:textAllCaps="false"
                   android:textSize="20sp"
                   android:backgroundTint="@color/light_black"
                   android:textColor="@color/offwhite"
                   style="?attr/materialButtonOutlinedStyle"
                   android:layout_marginBottom="10dp"/>


               <View
                   android:layout_width="340dp"
                   android:layout_gravity="center"
                   android:layout_height="1dp"
                   android:background="@color/offwhite" />


               <Button
                   android:id="@+id/deleteaccount"
                   android:layout_marginTop="10dp"
                   style="?attr/materialButtonOutlinedStyle"
                   android:layout_width="260dp"
                   android:layout_gravity="center"
                   android:backgroundTint="@color/light_black"
                   android:layout_height="50dp"
                   android:text="@string/delete_account"
                   android:textAllCaps="false"
                   android:textSize="20sp"
                   android:textColor="#FF0000"
                   android:layout_marginBottom="10dp"/>


           </LinearLayout>
       </LinearLayout>



</ScrollView>