<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="#FEF9F2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="200dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/edit_your_data"
            android:textColor="@color/mehhblack"
            android:textSize="25sp">
        </TextView>
       <LinearLayout

           android:layout_height="wrap_content"
           android:layout_width="360dp"
           android:layout_gravity="center"
           android:layout_marginTop="30dp"
           android:orientation="vertical"
           android:elevation="40dp"
           android:background="@drawable/shadow_shape">

           <EditText
               android:id="@+id/changename"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:layout_gravity="center"
               android:layout_marginBottom="10dp"
               app:cursorColor="@color/mehhblack"
               android:textColor="@color/mehhblack"
               android:layout_marginStart="15dp"
               android:layout_marginEnd="15dp"
               android:backgroundTint="@color/mehhblack"
               android:hint="@string/full_name"
               android:textColorHint="@color/mehhblack">
           </EditText>



       </LinearLayout>


        <LinearLayout

            android:layout_height="wrap_content"
            android:layout_width="360dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:elevation="40dp"
            android:orientation="vertical"
            android:background="@drawable/shadow_shape">

            <EditText
                android:id="@+id/changeemail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:cursorColor="@color/mehhblack"
                android:textColor="@color/mehhblack"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/mehhblack"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/mehhblack">
            </EditText>



        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:elevation="40dp"
            android:orientation="vertical"
            android:background="@drawable/shadow_shape">

            <EditText
                android:id="@+id/changepasword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:textColor="@color/mehhblack"
                app:cursorColor="@color/mehhblack"
                android:inputType="textPassword"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/mehhblack"
                android:hint="@string/new_password"
                android:textColorHint="@color/mehhblack">
            </EditText>

            <EditText
                android:id="@+id/changepaswordconfirm"
                android:layout_width="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                app:cursorColor="@color/mehhblack"
                android:textColor="@color/mehhblack"
                android:inputType="textPassword"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/mehhblack"
                android:hint="@string/confirm_new_password"
                android:textColorHint="@color/mehhblack">
            </EditText>



        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:elevation="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:background="@drawable/shadow_shape">

            <EditText
                android:id="@+id/changeusername"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/mehhblack"
                app:cursorColor="@color/mehhblack"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/mehhblack"
                android:hint="@string/new_username"
                android:textColorHint="@color/mehhblack">
            </EditText>



        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="40dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:background="@drawable/shadow_shape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:elevation="4dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/inputcntrcd"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    app:cursorColor="@color/mehhblack"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/mehhblack"
                    android:hint="@string/phone"
                    android:textColor="@color/mehhblack"
                    android:inputType="phone"
                    android:textColorHint="@color/mehhblack">

                </EditText>

                <EditText
                    android:id="@+id/changephn"
                    android:layout_width="285dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="10dp"
                    app:cursorColor="@color/mehhblack"
                    android:backgroundTint="@color/mehhblack"
                    android:textColor="@color/mehhblack"
                    android:hint="@string/new_phone_number"
                    android:inputType="phone"
                    android:textColorHint="@color/mehhblack">

                </EditText>
            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:gravity="center"
            android:backgroundTint="@color/light_black"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:fontFamily="arial"
            android:text="@string/save"
            style="?attr/materialButtonOutlinedStyle"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/offwhite" />


    </LinearLayout>

</ScrollView>