<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        android:background="#4d5eae">

        <ImageView
            android:id="@+id/imageLogin"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/istockphoto_1146701730_612x612"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#f05d00"
            app:cursorColor="#f05d00"
            app:hintTextColor="#f05d00"
            app:boxCornerRadiusBottomEnd="30sp"
            app:boxCornerRadiusBottomStart="30sp"
            app:boxCornerRadiusTopEnd="30sp"
            app:boxCornerRadiusTopStart="30sp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logIn_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="arial"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/white"
            app:boxStrokeColor="#f05d00"
            app:cursorColor="#f05d00"
            app:hintTextColor="#f05d00"
            app:boxBackgroundMode="outline"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomEnd="30sp"
            app:boxCornerRadiusBottomStart="30sp"
            app:boxCornerRadiusTopEnd="30sp"
            app:boxCornerRadiusTopStart="30sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logIn_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="arial"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#D36B00"
            android:fontFamily="arial"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white"
            android:textSize="20sp"
            app:cornerRadius="30sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstTimeHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="arial"
                android:text="@string/dont_have_acount"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="arial"
                android:text="@string/sign_up"
                android:textColor="#f05d00"
                android:textSize="14sp" />
        </LinearLayout>



    </LinearLayout>

</ScrollView>